--- a/Frontend/assets/css/scss/sections/_hero.scss
+++ b/Frontend/assets/css/scss/sections/_hero.scss
@@ -4,7 +4,7 @@
 
 ----------------------------------------------------------------------------- */
 .hero-bg {
-  background-image: url(../img/hero-bg.jpg);
+  background-image: url(../img/hero-bg.png);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -112,7 +112,7 @@ input[type="submit"] {
 }
 
 .homepage-bg-1 {
-  background-image: url(../img/hero-bg.jpg);
+  background-image: url(../img/hero-bg.png);
 }
 
 .homepage-bg-2 {
