git added static products

--- a/Frontend/Includes/navbar.html
+++ b/Frontend/Includes/navbar.html
@@ -16,11 +16,11 @@
 					<!-- menu start -->
 					<nav class="main-menu">
 						<ul>
-							<li class="current-list-item"><a href="#">Home</a>
-								<ul class="sub-menu">
+							<li class="current-list-item"><a href="{% url 'frontend:home' %}">Home</a>
+								<!-- <ul class="sub-menu">
 									<li><a href="{% url 'frontend:home' %}">Static Home</a></li>
 									<li><a href="{% url 'frontend:home2' %}">Slider Home</a></li>
-								</ul>
+								</ul> -->
 							</li>
 							<li><a href="{% url 'frontend:about' %}">About</a></li>
 							<li><a href="#">Pages</a>
