--- a/Frontend/assets/css/main.css
+++ b/Frontend/assets/css/main.css
@@ -1227,6 +1227,8 @@ div.owl-controls div.owl-nav div:hover {
 }
 
 .product-image img {
+  height: 200px;
+  object-fit: cover;
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
@@ -2412,6 +2414,8 @@ ul.social-link-team li a {
 
 .product-image img {
   width: 90%;
+  height: 200px;
+  object-fit: cover;
   border-radius: 5px;
   margin-bottom: 20px;
 }
