added review and added banner

--- a/Frontend/assets/css/main.css
+++ b/Frontend/assets/css/main.css
@@ -2119,7 +2119,7 @@ a.video-play-btn {
 .shop-banner {
   position: relative;
   background-color: #f5f5f5;
-  background-image: url(../img/1.jpg);
+  background-image: url(../img/dental_services_banner.gif);
   background-size: cover;
   padding: 110px 0px 115px;
 }
