added banner image

--- a/Frontend/Includes/footer.html
+++ b/Frontend/Includes/footer.html
@@ -6,17 +6,17 @@
 			<div class="row">
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box about-widget">
-						<h2 class="widget-title">About us</h2>
-						<p>Ut enim ad minim veniam perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</p>
+						<h2 class="widget-title">About DentalCom</h2>
+						<p>Your trusted partner in dental care. We provide comprehensive dental treatments, cosmetic dentistry, and preventive care using state-of-the-art technology and a patient-centered approach. Your smile is our priority.</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box get-in-touch">
 						<h2 class="widget-title">Get in Touch</h2>
 						<ul>
-							<li>34/8, East Hukupara, Gifirtok, Sadan.</li>
-							<li>support@DentalCom.com</li>
-							<li>+00 111 222 3333</li>
+							<li>123 Dental Avenue, Suite 200, Medical Plaza</li>
+							<li>info@dentalcom.com</li>
+							<li>+1 (555) 123-4567</li>
 						</ul>
 					</div>
 				</div>
@@ -34,10 +34,10 @@
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box subscribe">
-						<h2 class="widget-title">Subscribe</h2>
-						<p>Subscribe to our mailing list to get the latest updates.</p>
+						<h2 class="widget-title">Newsletter</h2>
+						<p>Subscribe to receive dental health tips, special offers, and appointment reminders.</p>
 						<form action="{% url 'frontend:home' %}">
-							<input type="email" placeholder="Email">
+							<input type="email" placeholder="Your email address">
 							<button type="submit"><i class="fas fa-paper-plane"></i></button>
 						</form>
 					</div>
