--- a/Frontend/assets/css/main.css
+++ b/Frontend/assets/css/main.css
@@ -2068,28 +2068,14 @@ a.video-play-btn {
 }
 
 .abt-bg {
-  background-image: url(../img/abt.jpg);
   height: 100%;
   width: 100%;
-  background-size: cover;
-  background-position: center;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-  position: relative;
-  z-index: 1;
-  overflow: hidden;
+  margin-top: 70px;
+  border-radius: 100px;
+
 }
 
-.abt-bg:after {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  content: "";
-  background-color: #051922;
-  opacity: 0.3;
-}
+
 
 .abt-section .abt-text {
   padding: 50px;
